--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
   <body>
     <header></header>
     <main>
-        <section class="flow">
+        <div class="flow">
           <div class="img1"></div>
-          <div class="step">step1</div>
+          <span class="step">step1</span>
           <h3 class="flow-heading">タイトルが入ります</h3>
           <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
-        </section>
-        <section class="flow">
+        </div>
+
+        <div class="flow">
           <div class="img2"></div>
-          <div class="step">step2</div>
+          <span class="step">step2</span>
           <h3 class="flow-heading">タイトルが入ります</h3>
           <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
-        </section>
-        <section class="flow">
+        </div>
+
+        <div class="flow">
           <div class="img3"></div>
-          <div class="step">step3</div>
+          <span class="step">step3</span>
           <h3 class="flow-heading">タイトルが入ります</h3>
           <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
-        </section>
+        </div>
     </main>
     <footer></footer>
   </body>
