--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <header></header>
+    <main>
+      <section class="flow-box">
+        <div class="img1"></div>
+        <span class="step">step1</span>
+        <h3 class="headline">タイトルが入ります</h3>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      </section>
+      <section class="flow-box">
+        <div class="img2"></div>
+        <span class="step">step2</span>
+        <h3 class="headline">タイトルが入ります</h3>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      </section>
+      <section class="flow-box">
+        <div class="img3"></div>
+        <span class="step">step3</span>
+        <h3 class="headline">タイトルが入ります</h3>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
